2019-06-21  Richard Biener  <rguenther@suse.de>

PR tree-optimization/90913
	* tree-vect-loop-manip.c (vect_loop_versioning): Do not re-use
	the scalar variant of if-conversion versioning.

	* gfortran.dg/vect/pr90913.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@272545 138bc75d-0d04-0410-961f-82ee72b054a4